--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -21,23 +21,29 @@
     # Logs
     l  = log --pretty=oneline --decorate --abbrev-commit --max-count=15
     ll = log --graph --pretty=format:'%Cred%h%Creset %an: %s %Creset%Cgreen(%cr)%Creset' --abbrev-commit --date=relative
+
 [color]
   diff = auto
   status = auto
+
 [color "diff"]
     meta = yellow bold
     frag = magenta bold
     old = red bold
     new = green bold
+
 [color "status"]
     added     = cyan bold
     branch    = cyan bold
     changed   = magenta bold
     deleted   = red bold
     untracked = yellow bold
+
 [push]
     # 'git push' will push the current branch to its tracking branch
     # the usual default is to push all branches
     default = tracking
+
 [core]
-    excludesfile = ~/.gitignore_global
+    excludesfile = ~/.gitignore
+    editor       = vim
